# review-prism

./: .env.example  .gitignore  README.md  pyproject.toml
src/prism_review/: __init__.py  cli.py  github_client.py  interactive.py  reviewer.py
